FEAT: ADD RESTART TO TUNNEL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
             - redis
     localtunnel:
         image: efrecon/localtunnel
+        restart: always
         links:
             - laravel.test
         command:
